[project]
name = "heart-sound-analysis"
version = "0.1.0"
description = "Analytical tools for understanding heart-sound propagation in the human chest (MEng project)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8",
    "nidaqmx>=1.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "pydvma>=0.1",
    "scipy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heart_sound_analysis"]
